--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ black==23.1.0
 certifi==2022.12.7
 charset-normalizer==3.1.0
 channels~=4.0.0
+channels-redis==4.1.0
 click==8.1.3
 colorama==0.4.6
 Django==4.1.7
